# 9.pyclass

./: README.md  etl.py  exemplo_00.py  exercicio1.py  exercicio2.py  pipeline.py  pyproject.toml  utils_exer1.py
